--- a/build.gradle
+++ b/build.gradle
@@ -2,11 +2,13 @@
 
 buildscript {
     repositories {
+        google()
         jcenter()
+        maven { url 'https://jitpack.io' }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.1.0'
-
+        classpath 'com.android.tools.build:gradle:3.0.0'
+        classpath 'com.github.dcendents:android-maven-gradle-plugin:2.0' // Add this line
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -14,7 +16,9 @@ buildscript {
 
 allprojects {
     repositories {
+        google()
         jcenter()
+        maven { url 'https://jitpack.io' }
     }
 }
 
