--- a/gradle.properties
+++ b/gradle.properties
@@ -15,3 +15,11 @@ org.gradle.jvmargs=-Xmx1536m
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
+kotlin.code.style=official
+org.gradle.daemon=true
+org.gradle.parallel=true
+org.gradle.configureondemand=true
+android.injected.testOnly=false
+android.useAndroidX=true
+android.enableJetifier=true
+android.disableResourceValidation=true
